--- a/css/styles.css
+++ b/css/styles.css
@@ -5,164 +5,39 @@
   font-family: "Poppins", sans-serif;
 }
 
-html,
-body {
-  height: 100%;
-}
-
-header {
-  background-color: #00ced1;
+#header {
   padding: 10px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.info-header {
+  background-color: rgb(45, 133, 133);
   color: white;
-  display: flex;
-  justify-content: space-around;
-  cursor: pointer;
-  /* width: 150px; */
 }
 
-.info-header img {
-  width: 40px;
-  height: 40px;
-  border-radius: 20px;
-  margin: 0 8px;
-  cursor: pointer;
-}
-
-.info-header-logo {
-  color: white;
-  display: flex;
-  justify-content: space-around;
-}
-
-.info-header-logo img:hover {
-  opacity: 0.7;
-}
-
-.info-header-logo img {
-  width: 140px;
-  height: 40px;
-  cursor: pointer;
-}
-
-.info-header svg {
-  margin: 0 10px;
-}
-
-.icons-header:hover {
-  opacity: 0.7;
-}
-
-.icons-header {
-  margin-left: 10px;
-  cursor: pointer;
-}
-
-.main {
-  display: flex;
-  flex-wrap: wrap;
-  height: 100%;
-}
-
-/* --------------------------------------------- sidebar  */
-.sidebar {
-  width: 15%;
-  background-color: #f4f5f6;
-  height: 100%;
-}
-
-.sidebar h3 {
-  color: #04999c;
-  font-size: 20px;
-  margin: 10px;
-}
-
-.sidebar a {
-  display: block;
-  text-decoration: none;
-  padding: 10px 15px;
-  color: #444;
-}
-
-.sidebar a:hover {
-  border-left: 5px solid #00ced1;
-  background-color: rgb(225, 222, 222);
-  color: #777;
-  font-weight: bold;
-}
-
-.sidebar a > svg {
-  color: #444;
-}
-
-.sidebar a.sidebar-active {
-  border-left: 5px solid #00ced1;
-  background-color: rgb(225, 222, 222);
-  color: #777;
-  font-weight: bold;
-}
-/* --------------------------------------------fim sidebar  */
-
-.content {
-  width: 85%;
-  background-color: rgb(239, 237, 237);
-  padding: 20px;
-}
-
-.titulo-secao {
-  border-radius: 10px;
-  background-color: white;
-  padding: 10px;
-}
-
-.titulo-secao h2 {
-  font-size: 19px;
-  color: #00ced1;
-}
-
-.titulo-secao p {
-  font-size: 14px;
-  color: #00ced1;
-}
-
-.titulo-secao svg {
-  color: #00ced1;
-}
-
-/* ---------------- fim titulo --------------------*/
-
-.box-info {
-  display: flex;
-  justify-content: space-around;
-  width: 100%;
-  margin-top: 20px;
-}
-
-.box-info-single {
-  display: flex;
-  justify-content: space-between;
-  text-align: center;
-  border-radius: 10px;
-  color: white;
-  width: 80%;
-  margin: 0 10px;
-  padding: 10px;
-}
-
-.info-text p {
-  font-size: 30px;
-  font-weight: bold;
-}
-
-.box-info-single span {
-  font-size: 28px;
-}
-
-.grafico {
+#container {
   display: flex;
   justify-content: center;
+  flex-direction: row;
+}
+
+#container p {
+  font-size: 6cqb;
+}
+
+#qtde-unica {
+  height: 30%;
+  width: 30%;
+  text-align: center;
+  background-color: rgb(45, 133, 133);
+  border-radius: 10px;
+  padding: 10px;
+  font-weight: bold;
+  margin: 10px;
+  color: white;
+  cursor: pointer;
+  border-left: 5px solid rgb(35, 40, 42);
+}
+
+#container-data {
+  background-color: rgb(238, 233, 233);
+  margin: 10px;
+  padding: 10px;
+  border-radius: 10px;
 }
