--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,8 @@
 }
 
 #header {
-  padding: 10px;
-  background-color: rgb(45, 133, 133);
+  padding: 20px;
+  background-color: rgb(239, 241, 241);
   color: white;
 }
 
@@ -18,20 +18,21 @@
 }
 
 #container p {
-  font-size: 16px; /* Define um tamanho de fonte padrão para os parágrafos dentro de container */
+  font-size: 30px; /* Define um tamanho de fonte padrão para os parágrafos dentro de container */
 }
 
 #qtde-unica {
   flex-basis: 30%; /* Define a largura base como 30% da largura do container */
   text-align: center;
-  background-color: rgb(45, 133, 133);
+  background-color: rgb(248, 250, 250);
   border-radius: 10px;
   padding: 10px;
   font-weight: bold;
   margin: 10px;
-  color: white;
+  color: rgb(12, 122, 226);
   cursor: pointer;
-  border-right: 5px solid rgb(90, 5, 20);
+  border-right: 2px solid rgb(123, 118, 119);
+  height: 120px;
 }
 
 /* Regra de mídia para tornar o design responsivo */
@@ -46,6 +47,13 @@
   margin: 10px;
   padding: 10px;
   border-radius: 10px;
+  line-height: 30px;
+  font-size: 12px;
+}
+
+#container-data h2 {
+  font-size: 12px;
+  margin-bottom: 5px;
 }
 
 /* Regra de mídia para tornar o design responsivo */
@@ -53,4 +61,12 @@
   #qtde-unica {
     flex-basis: 45%; /* Reduz a largura para 45% quando a largura da tela é menor que 768px */
   }
+}
+
+#logo {
+  width: 200px;
+}
+
+#qu {
+  font-size: 60px;
 }
